hphp/hack/test/typecheck/switch_fallthrough4.php.exp
File "switch_fallthrough4.php", line 15, characters 11-11:
This switch has a case that implicitly falls through and is not annotated with // FALLTHROUGH (NastCheck[3005])
File "switch_fallthrough4.php", line 18, characters 10-10:
This case implicitly falls through
